2011-02-22  Eric B. Weddington  <eric.weddington@atmel.com>

    * doc/api/tools-install.dox: Partial documentation changes
    for building avr-libc for MinGW/Windows.

2011-02-22  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #24861.
	* include/avr/interrupt.h: Remove extra code blocks in documentation.
	Fix spacing.
	* NEWS: Add item to fixed bugs list.

2011-02-21  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #32103. Thanks to Thomas Rudin for fix.
	* configure.ac: Fix wildcards in searching for cross tools.
	* NEWS: Add item to fixed bugs list.

2011-02-21  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #32419.
	* include/avr/iox192a3.h (*EEPROM_SIZE): Fix values.
	* NEWS: Add item to fixed bugs list.

2011-02-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump for post-release.

2011-02-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc-1.7.1.

2011-02-16  Anitha Boyapati <anitha.boyapati@atmel.com>

	* include/avr/power.h: Changes to power_all_enable()/disable() for 
	Xmega A and D family

2011-02-14  Anitha Boyapati <anitha.boyapati@atmel.com>

	Thanks to Praveen Kaushik <Praveen_Kumar.Kaushi@atmel.com> for the device
	support.
	* configure.ac: Support for ATMega16HVB RevB, ATMega32HVB RevB.
	* devtools/gen-avr-lib-tree.sh: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/eeprom.h: Same.
	* include/avr/io.h: Same.
	* include/avr/iom16hvb.h: Header file regenerated.
	* include/avr/iom16hvbrevb.h: Added newly.
	* include/avr/iom32hvb.h: Header file regenerated.
	* include/avr/iom32hvbrevb.h: Added newly.
	* include/avr/Makefile.am: Support for atmega16HVB RevB, 
	ATMega32HVB RevB.
	* include/avr/power.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/wdt.h: Same.

2011-02-14  Anitha Boyapati <anitha.boyapati@atmel.com>

	Thanks to Usha Gupta <usha.gupta@atmel.com> for the device
	support.
	* include/avr/io.h: Support for AVR Tiny84a