@@ -1,3 +1,10 @@
+2011-02-23  Eric B. Weddington  <eric.weddington@atmel.com>
+
+	Fix for bug #17815.
+	* doc/api/Makefile.am (install-dox-man): Rewrite to fix install
+	location to use mandir configuration option.
+	* NEWS: Add item to fixed bugs list.
+
 2011-02-22  Eric B. Weddington  <eric.weddington@atmel.com>
 
     * doc/api/tools-install.dox: Partial documentation changes
